--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,25 +1,21 @@
 .btn {
-  display: flex;
+  @include flexible();
+
   border-radius: 4px;
   height: 50px;
   min-width: 200px;
   padding: 10px;
 
   background-color: var(--main-blue);
-  color: var(--white);
-  
+    
   border: none;
   
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  align-items: center;
-  justify-content: center;
+  @include font(700, 16px, 1.87, var(--white));
+  
   letter-spacing: 0.06em;
 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+  @include main-transition2(box-shadow, background-color); 
+ 
   &:hover,
   &:focus {
     background-color: #188CE8;
