--- a/sass/components/_customers.scss
+++ b/sass/components/_customers.scss
@@ -3,18 +3,16 @@
 }
 
 .customers-list__link {
-  display: flex;
+  @include flexible();
+
   width: 170px;
   height: 90px;
   color: #AFB1B8;
   border: 1px solid;
   border-radius: 4px;
-  align-items: center;
-  justify-content: center;
-
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+  
+  @include main-transition2(color, outline);
+ 
   &:hover, 
   &:focus {
     color: var(--main-blue);
