--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,17 +1,16 @@
 .features-list__icon {
-  display: flex;
+  @include flexible();
+  
   margin-bottom: 30px;
   width: 270px;
   height: 120px;
   background-color: var(--light-back);
-  align-items: center;
-  justify-content: center;
+
 }
 
 .features-list__title {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
+  @include font(700, 14px, 1.14, inherit);
+
   text-transform: uppercase;
   margin-bottom: 10px;
 }
@@ -22,8 +21,7 @@
 }
 
 .features-list__text {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  @include font(400, 14px, 1.71, inherit);
+  
   margin: 0;
 }
