--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -14,9 +14,10 @@
 
 .footer__location,
 .footer-contacts {
+  
   font-style: normal;
-  font-size: 14px;
-  line-height: 1.71;
+  @include font(400, 14px, 1.71, inherit);
+  
   display: flex;
   flex-direction: column;
 }
@@ -34,8 +35,8 @@
 
   color: var(--text-white6);
 
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+  @include main-transition(color);
+  
   &:hover,
   &:focus {
     color: var(--main-blue);
@@ -53,12 +54,11 @@
   margin-top: 0;
   margin-bottom: 20px;
   
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  text-transform: uppercase;
   
-  color: var(--white);
+  @include font(700, 14px, 1.14, var(--white));
+  
+  text-transform: uppercase;
+   
 }
 
 /* Подписывайтесь на рассылку */
@@ -87,11 +87,11 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
   &::placeholder {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.25;
+
+    @include font(400, 16px, 1.25, rgba(255, 255, 255, 0.6));
+    
     letter-spacing: 0.03em;
-    color: rgba(255, 255, 255, 0.6);
+    
   }
 
 }
