--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -36,15 +36,12 @@
   padding-top: 32px;
   padding-bottom: 32px;  
 
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
+  @include font(500, 14px, 1.14, var(--title-grey));
+  
   letter-spacing: 0.02em;
 
-  color: var(--title-grey);
-
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+  @include main-transition(color);
+  
   &:hover,
   &:focus {
     color: var(--main-blue);
@@ -78,11 +75,8 @@
 .header-contacts__link {
   display: flex;
    
-  color: var(--text-grey);
-
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
+  @include font(500, 14px, 1.14, var(--text-grey));
+  
   letter-spacing: 0.02em;
 
   &:hover,
