--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -31,11 +31,8 @@
 
   outline: none;
 
-  @include main-transition(color);
-  @include main-transition(background-color);
-  @include main-transition(box-shadow);
+  @include main-transition3(color, box-shadow, background-color);
 
-  
   &:hover,
   &:focus {
     background-color: var(--main-blue);
@@ -48,6 +45,7 @@
 }
 
 /* Список-портфолио */
+
 .portfolio-list__item {
   flex-basis: calc(100% / 3 - 30px);
 
@@ -57,9 +55,8 @@
 .portfolio-list__link {
   display: block;
 
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+  @include main-transition2(box-shadow, outline);
+ 
   &:hover,
   &:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
@@ -116,7 +113,7 @@
     background-color: rgba(33, 150, 243, 0.9);
     
     transform: translateY(100%);
-    @include main-transition (transform);
+    @include main-transition(transform);
   }
 }
 
@@ -140,5 +137,6 @@
   color: var(--white);
 
   transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @include main-transition(transform);
+  
 }
