--- a/sass/components/_social-links.scss
+++ b/sass/components/_social-links.scss
@@ -6,17 +6,14 @@
 }
 
 .social-networks__link {
-  display: flex;
+  @include flexible();
+  
   height: 44px;
   width: 44px;
-  align-items: center;
-  justify-content: center;
+  
 
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),  
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+  @include main-transition4(color, background-color, border-radius, outline);
+  
   &:hover, 
   &:focus {
     color: var(--white);
