--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import 'utils/variables';
+@import 'utils/normalize';
 @import 'utils/base';
 @import 'utils/mixins';
 @import 'components/sections&grids';
